2nd training/Community/Community/Community1/force-app/main/default/objects/Approval_Matrix__c/Approval_Matrix__c.object-meta.xml
<CustomObject>
    <description>All details list of the approval Matrix is stored in this object.</description>
    <label>Approval Matrix</label>
    <nameField>
        <displayFormat>Record-{0000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval_Matrixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>