2nd training/Community/Community/Community1/force-app/main/default/objects/Approval_Matrix__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <description>CEO</description>
    <inlineHelpText>CEO</inlineHelpText>
    <label>CEO</label>
    <length>150</length>
    <type>Text</type>
</CustomField>