2nd training/Community/Community/Community1/force-app/main/default/objects/Approval_Matrix__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country</description>
    <inlineHelpText>Country</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CS Singapore</fullName>
            </value>
            <value>
                <fullName>CS Hong Kong</fullName>
            </value>
            <value>
                <fullName>CS Beijing</fullName>
            </value>
            <value>
                <fullName>CS Shanghai</fullName>
            </value>
            <value>
                <fullName>CS Indonesia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>