2nd training/Community/Community/Community1/force-app/main/default/objects/Approval_Matrix__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department</description>
    <inlineHelpText>Department</inlineHelpText>
    <label>Department</label>
    <length>150</length>
    <type>Text</type>
</CustomField>