2nd training/Community/Community/Community1/force-app/main/default/objects/Approval_Matrix__c/fields/Employee_Review_Form__c.field-meta.xml
<CustomField>
    <fullName>Employee_Review_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Review Form</label>
    <referenceTo>Employee_Review_Form__c</referenceTo>
    <relationshipLabel>Approval_Matrixes</relationshipLabel>
    <relationshipName>Approval_Matrixes</relationshipName>
    <type>Lookup</type>
</CustomField>