2nd training/Community/Community/Community1/force-app/main/default/objects/Approval_Matrix__c/fields/GM__c.field-meta.xml
<CustomField>
    <fullName>GM__c</fullName>
    <description>GM</description>
    <inlineHelpText>GM</inlineHelpText>
    <label>GM</label>
    <length>150</length>
    <type>Text</type>
</CustomField>