2nd training/Community/Community/Community1/force-app/main/default/objects/Approval_Matrix__c/fields/HOD__c.field-meta.xml
<CustomField>
    <fullName>HOD__c</fullName>
    <description>HOD</description>
    <inlineHelpText>HOD</inlineHelpText>
    <label>HOD</label>
    <length>150</length>
    <type>Text</type>
</CustomField>