2nd training/Community/Community/Community1/force-app/main/default/objects/Approval_Matrix__c/listViews/Approval_Matrix_View.listView-meta.xml
<ListView>
    <fullName>Approval_Matrix_View</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Department__c</columns>
    <columns>HOD__c</columns>
    <columns>CEO__c</columns>
    <columns>GM__c</columns>
    <columns>HR__c</columns>
    <filterScope>Mine</filterScope>
    <label>Approval Matrix View</label>
</ListView>